2011-07-12  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * doc/Doxyfile Fixed some documentation issues over some LaTeX
        formulas. Removed custom header and footer for HTML since generated doc
        may fail between different versions of Doxygen introducing mismatch in
        stylesheets. And added a LaTeX output to the documentation. All in all,
        most changes are to make the documentation directory cleaner and more
        standard with regard to the output generated by Doxygen.

        * src/bits/spatial_range.hpp (spatial): fix compilation issues detected
        with g++4.5, that went through with MSVC9.0.

        * doc/Doxygen added new documentation variables and documentation
        aliases to generate concepts lists.

        * src/bits/spatial_range.hpp design of overlap and enclose bounds
        finalized. Also added new explanation for RangePredicated concept.

        * test/verify.cpp Added tests for the bounds factory and the bounds
        themselves. The last part must still be implemented.

        * src/bits/spatial_exception.hpp remapped conflicting names in
        exceptions and added new exceptions for overlap and enclose bounds.

2011-07-08  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Overlap_bound is done. Need to redesign Range_iterators a little bit
        to accomodate the new iterface for the bounds.

2011-07-07  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Started working on overlap and enclose iterator. It seems overlap are
        trickier to implement than I suspected.

        * Modified the compilation parameters to make it even more strict. No
        more shadowing of variables, and not more implicit converstion of
        types.

2011-06-16  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * src/bits/spatial_mapping.tpp fixed an issue with lower_bound and
        upper_bound functions. Wrong initialization of 'best' pointer. Somehow